# adaptive-learning

./: .codeclimate.yml  .dockerignore  .env  .gitignore  .travis.yml  Dockerfile  Makefile  README.MD  build.cmd  conda_env.yml  conda_env_win.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml  resillient_migrate.py  run.sh  test.sh
.github/scripts/: build.sh  test.sh
.github/workflows/: build-test.yml
.travis/: build.sh  test.sh
adaptive_learning/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
adaptive_learning/backend/: apps.py  models.py  views.py
adaptive_learning/backend/middlewares/: auth.py
adaptive_learning/backend/migrations/: 0001_initial.py  0002_add_root_user.py  0003_aluser_learning_material_preference.py  0003_auto_20210601_1439.py  0004_alter_aluser_learning_material_preference.py
adaptive_learning/schema/: __init__.py  utils.py
adaptive_learning/schema/classroom/: mutations.py  queries.py  types.py
adaptive_learning/schema/media/: types.py
adaptive_learning/schema/user/: mutations.py  queries.py  types.py
docker/postgres/: Dockerfile
fixtures/: users.json
nginx/: Dockerfile
postgres/: Dockerfile
scripts/: build.cmd
scripts/dev/: docker-compose.cmd  docker-compose.sh  load-secrethub-credentials.cmd  load-secrethub-credentials.sh
scripts/docker/: build.cmd  run-dev.sh  run-prod.sh  run.sh  test.sh
templates/email/: activation_email.html
tests/integration/: test_auth.py  test_queries.py  test_staticfiles.py
tests/unit/: test_main.py  tests.py
(+1 files in other folders)
